--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,15 @@ pipeline
         stage('Download source')
         {
             steps {
-                sh ''
+				script {
+					res = sh(script: "test -d /home/source/mf.container && echo '1' || echo '0' ", returnStdout: true).trim()
+					if(res=='1'){
+						sh 'rm -R /home/source'
+					}
+				}
+
+                sh 'mkdir /home/source/mf.container'
+                sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/mf.container'
             }
         }
         stage('Create image')
