--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,9 +7,16 @@ pipeline
         {
             steps {
 				script {
+					res = sh(script: "test -d /home/source && echo '1' || echo '0' ", returnStdout: true).trim()
+					if(res=='0'){
+						sh 'mkdir /home/source'
+					}
+				}
+
+				script {
 					res = sh(script: "test -d /home/source/mf.container && echo '1' || echo '0' ", returnStdout: true).trim()
 					if(res=='1'){
-						sh 'rm -R /home/source'
+						sh 'rm -R /home/source/mf.container'
 					}
 				}
 
