--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,18 +9,18 @@ pipeline
 				script {
 					res = sh(script: "test -d /home/source && echo '1' || echo '0' ", returnStdout: true).trim()
 					if(res=='0'){
-						sh 'mkdir /home/source'
+						sh 'sudo mkdir /home/source'
 					}
 				}
 
 				script {
 					res = sh(script: "test -d /home/source/mf.container && echo '1' || echo '0' ", returnStdout: true).trim()
 					if(res=='1'){
-						sh 'rm -R /home/source/mf.container'
+						sh 'sudo rm -R /home/source/mf.container'
 					}
 				}
 
-                sh 'mkdir /home/source/mf.container'
+                sh 'sudo mkdir /home/source/mf.container'
                 sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/mf.container'
             }
         }
