--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,9 +7,9 @@ pipeline
         {
             steps {
 				script {
-					res = sh(script: "test -d /home/$USER/source && echo '1' || echo '0' ", returnStdout: true).trim()
+					res = sh(script: "test -d /home/source && echo '1' || echo '0' ", returnStdout: true).trim()
 					if(res=='0'){
-						sh 'mkdir /home/$USER/source'
+						sh 'mkdir /home/source'
 					}
 				}
             }
