--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,12 +6,7 @@ pipeline
         stage('Download source')
         {
             steps {
-				script {
-					res = sh(script: "test -d /home/source && echo '1' || echo '0' ", returnStdout: true).trim()
-					if(res=='0'){
-						sh 'mkdir /home/source'
-					}
-				}
+				sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/mf.container'
             }
         }
         stage('Create image')
