--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,8 @@ pipeline
         stage('Download source')
         {
             steps {
-				sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/mf.container'
+				sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/mf.container && pwd'
+				sh 'pwd'
             }
         }
     }
