--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline
         stage('Download source')
         {
             steps {
-				sh 'cd /home/source && git clone https://github.com/mistek131995/Freedom.MF.Container.git'
+				sh 'cd /home/source && pwd && git clone https://github.com/mistek131995/Freedom.MF.Container.git'
             }
         }
     }
