--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,5 +16,11 @@ pipeline
 				sh 'git clone https://github.com/mistek131995/Freedom.MF.Container.git /home/source/MF.Container'
             }
         }
+        stage('Build image')
+        {
+            steps {
+				sh 'cd /home/source/MF.Container && docker build'
+            }
+        }
     }
 }
