--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,25 @@ pipeline
         stage('Build image')
         {
             steps {
-				sh 'cd /home/source/MF.Container && docker build .'
+				sh 'docker build -t MF.Container.${BUILD_NUMBER} /home/source/MF.Container'
+            }
+        }
+        stage('Stop container')
+        {
+            steps {
+                script{
+                    def containerId = sh (script: 'docker ps -q -f name=MF.Container', returnStdout: true)
+
+                    if(containerId != ''){
+                        sh "docker stop ${containerId}"
+                    }
+                }
+            }
+        }
+        stage('Run container')
+        {
+            steps {
+				sh 'docker run -d -p 80:80 -p 443:443 --name=vpn-api-${BUILD_NUMBER} --restart=always MF.Container.${BUILD_NUMBER}'
             }
         }
     }
